Fixed BookContent Overflow!

--- a/items/static/items/book.css
+++ b/items/static/items/book.css
@@ -1,14 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400,600|Tulpen+One&display=swap");
 
 :root {
-  /* colors */
   --body-bg: #FAFAFA;
   --page-bg: #F5F5F5;
   --dark-text: #2A2935;
-  /* spacing */
-  /* this is what defines the global scale */
   --baseline: 12px;
-  /* fonts */
   --book-title: "Tulpen One", sans-serif;
   --title: "Cormorant Garamond", serif;
   --body: "Cormorant Garamond", serif;
@@ -40,205 +36,139 @@
 .hover-header.visible {
   opacity: .5;
 }
-.cover {
-  /* width: calc(var(--baseline) * 60); */
-  /* height: calc(var(--baseline) * 42.6); */
-  /* box-shadow: 0 0 100px rgba(0, 0, 0, 0.3); */
-  height: 90vh;
-  margin: 5vh;
-  display: flex;
-  justify-content: center;
-}
+
 
 body{
   background-color: #2A2935 !important;
 }
 
+
+
+* { box-sizing: border-box; }
+
+
+
+body {
+  margin: 0;
+  display: flex;
+  min-height: 100dvh;
+  perspective: 1000px;
+  display: flex;
+  flex-direction: column;
+  font: 1em/1.4 "Poppins", sans-serif;
+  overflow: scroll;
+  color: hsl(180 68% 5%);
+  background-image: radial-gradient(circle farthest-corner at 50% 50%, hsl(187 20% 88%) 30%, hsl(149 20% 94%) 100%);
+}
+
 .book {
-  width: 100%;
-  height: 90vh;
-  width: 60vw;
-  display: flex;
-  perspective: 1200px;
-  box-shadow: 0 0 60px 10px rgba(255, 255, 255, 0.6); 
-  
-}
-
-.book__page {
   position: relative;
-  width: 50%;
-  height: 100%;
-  display: grid;
-  transform: rotateY(0deg);
-  transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transform-origin: 0% 0%;
-  background-color: var(--page-bg);
-  background-image: linear-gradient(90deg, #e3e3e3 0%, rgba(247, 247, 247, 0) 18%);
-}
-
-.book__page:nth-of-type(1) {
-  background-image: linear-gradient(-90deg, #e3e3e3 0%, rgba(247, 247, 247, 0) 18%);
-}
-
-.book__page--1 {
-  cursor: pointer;
-  overflow: hidden;
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.book__page--1 img {
-  width: 50%;
-  max-width: 100%;
-  height: auto;
-
-}
-
-.book__page--2 {
-  position: absolute;
-  right: 0;
+  margin: auto;
+  width: 400px;
+  min-width: 400px;
   pointer-events: none;
   transform-style: preserve-3d;
-  background-color: var(--page-bg);
-  background-image: linear-gradient(90deg, #e3e3e3 0%, rgba(247, 247, 247, 0) 18%);
+  transition: translate 1s;
+  translate: calc(min(var(--c), 1) * 50%) 0%;
+  rotate: 1 0 0 10deg;
 }
 
-.book__page--4 {
-  cursor: pointer;
-  padding: 0 calc(var(--baseline) * 3);
-}
-
-.book__page-front {
-  position: absolute;
+.page {
+  --thickness: 4;
+  flex: none;
+  display: flex;
   width: 100%;
-  height: 100%;
-  transform: rotateY(0deg) translateZ(1px);
+  font-size: 2cqmin;
+  pointer-events: all;
+  user-select: none;
+  transform-style: preserve-3d;
+  transform-origin: left center;
+  transition:
+    transform 1s,
+    rotate 1s ease-in calc((min(var(--i), var(--c)) - max(var(--i), var(--c))) * 50ms);
+  translate: calc(var(--i) * -100%) 0px 0px;
+  transform: translateZ( calc((var(--c) - var(--i) - 0.5) * calc(var(--thickness) * .23cqmin)));
+  rotate: 0 1 0 calc(clamp(0, var(--c) - var(--i), 1) * -180deg);
 }
 
-.book__page-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 0 calc(var(--baseline) * 1.8);
-  transform: rotateY(180deg) translateZ(1px);
-}
-
-.book__page .page__content {
-  padding: var(--baseline);
-  height: 100%;
+.front,
+.back {
   position: relative;
-  text-align: center;
-}
-
-.book__page .page__content-book-title {
-  font-family: var(--book-title);
-  font-size: calc(var(--base-size) * 3);
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  color: var(--dark-text);
-  margin-top: calc(var(--baseline) * 5);
-  margin-bottom: calc(var(--baseline) * 2);
-}
-
-.book__page .page__content-author {
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 1.2);
-  font-weight: 100;
-  text-transform: uppercase;
-  color: var(--dark-text);
-  border-top: 1px solid var(--dark-text);
-  border-bottom: 1px solid var(--dark-text);
-  display: inline-block;
-  padding: calc(var(--baseline) / 2) calc(var(--baseline) / 5);
-  margin-bottom: calc(var(--baseline) * 6);
-}
-
-.book__page .page__content-credits {
-  font-family: var(--title);
-  text-transform: uppercase;
-  font-size: calc(var(--base-size) * 0.8);
-  margin-bottom: calc(var(--baseline) * 2);
-  letter-spacing: 1px;
-}
-
-.book__page .page__content-credits span {
-  display: block;
-  font-size: calc(var(--base-size) * 1.2);
-  letter-spacing: 0;
-}
-
-.book__page .page__content-copyright {
-  position: absolute;
-  width: calc(100% - (var(--baseline) * 2));
-  bottom: calc(var(--baseline) * 2);
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 0.8);
-  text-transform: uppercase;
-}
-
-.book__page .page__content-title {
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 1);
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  margin-top: calc(var(--baseline) * 5);
-  margin-bottom: calc(var(--baseline) * 3);
-}
-
-.book__page .page__content-table {
+  flex: none;
   width: 100%;
-  margin-top: calc(var(--baseline) * 2);
+  backface-visibility: hidden;
+  overflow: hidden;
+  background-color: #fff;
+  translate: 0px;
 }
 
-.book__page .page__content-table td {
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 1);
-  padding-bottom: calc(var(--baseline) * 1.5);
-  text-transform: uppercase;
+.back {
+  translate: -100% 0;
+  rotate: 0 1 0 180deg;
 }
 
-.book__page .page__content-blockquote {
-  margin-bottom: calc(var(--baseline) * 2);
+
+.book {
+  counter-reset: page -1;
+  & a {
+    color: inherit;
+  }
 }
 
-.book__page .page__content-blockquote-text {
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 0.67);
-  font-style: italic;
-  text-align: justify;
+.page {
+  box-shadow: 0em .5em 1em -.2em #00000020;
 }
 
-.book__page .page__content-blockquote-reference {
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 0.7);
-  margin-top: calc(var(--baseline) * 0.3);
-  float: right;
-  text-transform: uppercase;
+.front,
+.back {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  padding: 2em;
+  border: 1px solid #0002;
+  
+  &:has(img) {
+    padding: 0;
+  }
+  
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
+  &::after {
+    position: absolute;
+    bottom: 1em;
+    counter-increment: page;
+    content: counter(page) ".";
+    font-size: 0.8em;
+  }
+}
+.cover {
+  &::after {
+    content: "";
+  }
+}
+.front {
+  &::after {
+    right: 1em;
+  }
+  background: linear-gradient(to left, #f7f7f7 80%, #eee 100%);
+  border-radius: .1em .5em .5em .1em;
+}
+.back {
+  &::after {
+    left: 1em;
+  }
+  background-image: linear-gradient(to right, #f7f7f7 80%, #eee 100%);
+  border-radius: .5em .1em .1em .5em;
 }
 
-.book__page .page__content-text {
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 0.67);
-  text-align: justify;
-  text-indent: var(--baseline);
+.cover {
+  background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%),
+    hsl(231, 32%, 29%) url("https://picsum.photos/id/984/800/900") 50% / cover;
+  color: hsl(200 30% 98%);
 }
 
-.book__page .page__number {
-  position: absolute;
-  bottom: var(--baseline);
-  width: calc(100% - (var(--baseline) * 2));
-  font-family: var(--title);
-  font-size: calc(var(--base-size) * 0.67);
-  text-align: center;
-}
-
-.book input[type=radio] {
-  display: none;
-}
-
-.book input[type=radio]:checked+.book__page {
-  transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transform: rotateY(-180deg);
-}
